--- a/milestone1/photography.html
+++ b/milestone1/photography.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography</title>
-    <h1>This is just the start to my photography portfolio site</h1>
 </head>
+
+<body>
+    <h1>This is just the start to my photography portfolio site</h1>
+</body>
 
 </html>
