--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>This is just the start to my photography portfolio site</h1>
+    <p>I am just writing stuff I don't really know why my page is allowed to be previewed.</p>
 </body>
 
 </html>
