--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -4,6 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><em>Photography Portfolio</em></title>
+    <title>Tate Fishburn</title>
+</head>
+
+
+<!--
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography Portfolio</title>
     <style>
         body {
@@ -63,9 +75,9 @@
         <h2>This is just the start to my photography portfolio site</h2>
         <p>I am developing this site to showcase my photography work. More content will be added soon!</p>
 
-        <!-- Placeholder for future content -->
+        
         <div class="photo-gallery">
-            <!-- Photos will be added here -->
+            
         </div>
 
         <p><a href="../index.html">← Back to Home</a></p>
@@ -80,4 +92,4 @@
     </script>
 </body>
 
-</html>
+</html> -->
