adding some text

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -65,6 +65,14 @@
     }
 </style>
 
+<body> 
+    <header>
+        <h2>Tate Fishburn Photography</h2>
+        <h4>Specializing in Portraiture and Product Lifestyle Photography</h4>
+    </header>
+
+</body>
+
 <!--
 <!DOCTYPE html>
 <html lang="en">
