trying to adjust gap between h2 and h4

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -17,10 +17,18 @@
         color: #333;
     }
 
+    header h2 {
+        margin-bottom: 5px;
+    }
+
+    header h4 {
+        margin-top: 0;
+    }
+
     header {
-        background: #026c99;
+        background: #03b283;
         color: white;
-        padding: 10px 0;
+        padding: 7px 0;
         text-align: center;
     }
 
@@ -65,7 +73,7 @@
     }
 </style>
 
-<body> 
+<body>
     <header>
         <h2>Tate Fishburn Photography</h2>
         <h4>Specializing in Portraiture and Product Lifestyle Photography</h4>
