added competition page

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -17,7 +17,7 @@
         color: #333;
     }
 
-    header h2 {
+    header h1 {
         margin-bottom: 5px;
     }
 
@@ -26,9 +26,9 @@
     }
 
     header {
-        background: #03b283;
+        background: #026c99;
         color: white;
-        padding: 7px 0;
+        padding: 10px 0;
         text-align: center;
     }
 
@@ -72,13 +72,23 @@
         color: white;
     }
 </style>
-
+<nav>
+    <a href="competition.html">competition</a>
+    <a href="portfolio.html">portfolio</a>
+    <a href="audience.html">audience</a>
+</nav>
 <body>
     <header>
-        <h2>Tate Fishburn Photography</h2>
-        <h4>Specializing in Portraiture and Product Lifestyle Photography</h4>
+        <h1>Tate Fishburn Photography</h1>
+        <h4><em>Specializing in Portraiture and Product Lifestyle Photography</em></h4>
     </header>
 
+    <section>
+        <h2>About Me</h2>
+        <p>Hey! My name is Tate Fishburn, I grew up in Highland Utah and have been doing photography for quite a while.
+            I really enjoy shooting people and products for companies, and I try to have a unique style. This site
+            serves as a collection of some of my favorite photographs, enjoy!</p>
+    </section>
 </body>
 
 <!--
