added stuff working on href

--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -3,10 +3,10 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Competition</title>
+<title>Audience</title>
 
 <header>
-    <h1>Competition</h1>
+    <h1>Audience</h1>
 </header>
 
 <nav>
