Adjusted nav to work, added sections and footer.

--- a/milestone1/portfolio.html
+++ b/milestone1/portfolio.html
@@ -73,9 +73,9 @@
     }
 </style>
 <nav>
-    <a href="competition.html">competition</a>
-    <a href="portfolio.html">portfolio</a>
+    <a href="../index.html">home</a>
     <a href="audience.html">audience</a>
+    <a href="competition.html">competition</a>
 </nav>
 <body>
     <header>
@@ -89,7 +89,25 @@
             I really enjoy shooting people and products for companies, and I try to have a unique style. This site
             serves as a collection of some of my favorite photographs, enjoy!</p>
     </section>
+
+    <section>
+        <h1>Portraits</h1>
+        <p>Portraits are one of my favorite types of photography. I love capturing the essence of people, whether it's
+            a family member, a friend, or a celebrity. Here are some of my favorite portraits:</p>
+    </section>
+    <section>
+        <h1>Product Photography</h1>
+        <p>Product photography is a recent addition to my portfolio. I love capturing the essence of products, whether
+            it's a clothing item, a home decor piece, or a food item. Here are some of my favorite product
+            photographs:</p>
+    </section>
 </body>
+
+<footer>
+    <p>&copy; <span id="currentYear"></span> Tate Fishburn. All rights reserved.</p>
+    <p>Contact me at: <a href="mailto:tatefphotography@gmail.com">tatefphotography@gmail.com</a></p>
+    <p>Follow me on Instagram: <a href="https://www.instagram.com/tate.fishburn/">@tate.fishburn</a></p>
+</footer>
 
 <!--
 <!DOCTYPE html>
