--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -10,7 +10,7 @@
 </header>
 
 <nav>
-    <a href="index.html">home</a>
+    <a href="../index.html">home</a>
     <a href="competition.html">competition</a>
-    <a href="audience.html">audience</a>
+    <a href="portfolio.html">portfolio</a>
 </nav>
