adjusting style and adding text to competition.html

--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Competition</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Competition</title>
+</head>
 
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f9;
+        color: #333;
+    }
+
+    header h1 {
+        margin-bottom: 5px;
+    }
+
+    header h4 {
+        margin-top: 0;
+    }
+
+    header {
+        background: #026c99;
+        color: white;
+        padding: 10px 0;
+        text-align: center;
+    }
+
+    section {
+        max-width: 800px;
+        margin: 20px auto;
+        padding: 20px;
+        background: white;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    h1,
+    h2 {
+        color: #333;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    ul li {
+        margin: 5px 0;
+    }
+
+    ul li a {
+        color: #026c99;
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+    ul li a:hover {
+        text-decoration: underline;
+    }
+
+    footer {
+        text-align: center;
+        padding: 10px;
+        margin-top: 20px;
+        background: #333;
+        color: white;
+    }
+</style>
 <header>
-    <h1>Competition</h1>
+    <title>Competition</title>
 </header>
+
+<body>
+    <h1>Competition</h1>
+    <p>One example I want to work from is <a href="https://www.mpkelley.com/zn5jfin03urecqbmlcjv2n20nm5eva">Mike Bracken's</a> architectural portfolio</p>
+    <p>I love the sleek design of this, particularly for landscapes and editoral/fancy photos however I think the controls are a little confusing for navigation and I don't like the pink when selecting in nav</p>
+</body>
 
 <nav>
     <a href="../index.html">home</a>
