--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -9,8 +9,34 @@
     <h1>Audience</h1>
 </header>
 
+
+
 <nav>
     <a href="../index.html">home</a>
     <a href="competition.html">competition</a>
     <a href="portfolio.html">portfolio</a>
 </nav>
+
+<body>
+    <h1>Audience</h1>
+    <p>Below is an detailed list of my target audience for this site;</p>
+    <d1>
+        <dt>Geographic Location</dt>
+        <dd>
+            <p>Since potential clients will view this site as a resume for my work, I want most the people viewing it to be near me.  St. George and Salt Lake City, or within 50 miles of either city.</p>
+        </dd>
+        <dt>Age</dt>
+        <dd>
+            <p>Target age is going to be older than me, ideally 45+.  These people have money, and appreciate simple effective designs (and reading).</p>
+        </dd>
+        <dt>Income Level</dt>
+        <dd>
+            <p>Target audience should have disposable income of $100,000+ annually. This includes established professionals, business owners, and executives who can invest in quality services.</p>
+        </dd>
+        <dt>Professional Status</dt>
+        <dd>
+            <p>Small to medium business owners looking to establish or improve their online presence. Also targeting experienced professionals seeking career transitions who need a strong personal brand.</p>
+        </dt>
+        
+    </d1>
+</body>
