most recent draft

--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Competition</title>
 </head>
+<nav>
+    <a href="../index.html">home</a>
+    <a href="audience.html">audience</a>
+    <a href="portfolio.html">portfolio</a>
+</nav>
+<header>
+    <h1>Competition</h1>
+</header>
 
 <style>
     body {
@@ -82,8 +90,3 @@
     <p>I love the sleek design of this, particularly for landscapes and editoral/fancy photos however I think the controls are a little confusing for navigation and I don't like the pink when selecting in nav</p>
 </body>
 
-<nav>
-    <a href="../index.html">home</a>
-    <a href="audience.html">audience</a>
-    <a href="portfolio.html">portfolio</a>
-</nav>
