added index.html to milestone1

--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -9,7 +9,7 @@
 <nav>
     <a href="../index.html">home</a>
     <a href="audience.html">audience</a>
-    <a href="portfolio.html">portfolio</a>
+    <a href="index.html">portfolio</a>
 </nav>
 <header>
     <h1>Competition</h1>
