--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <nav>
     <a href="milestone1/audience.html">audience</a>
     <a href="milestone1/competition.html">competition</a>
-    <a href="milestone1/portfolio.html">portfolio</a>
+    <a href="milestone1/index.html">portfolio</a>
 </nav>
 
 <body>
@@ -98,7 +98,7 @@
         </ul>
         <h2>Final Project Milestones</h2>
         <ul>
-            <li><a href="milestone1/portfolio.html">Milestone 1</a></li>
+            <li><a href="milestone1/index.html">Milestone 1</a></li>
             <li><a href="https://www.figma.com/design/">Milestone 2</a></li>
             <li><a href="milestone3/index.html">Milestone 3</a></li>
             <li><a href="milestone4/index.html">Milestone 4</a></li>
