--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -73,7 +73,7 @@
 <nav>
     <a href="../index.html">home</a>
     <a href="competition.html">competition</a>
-    <a href="portfolio.html">portfolio</a>
+    <a href="index.html">portfolio</a>
 </nav>
 <header>
     <h1>Audience</h1>
