--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -14,3 +14,34 @@
     <a href="audience.html">audience</a>
     <a href="portfolio.html">portfolio</a>
 </nav>
+
+<body>
+    <section>
+        <h>Competitive Analysis of Other Photographer</h>
+        <p>
+            <a href="https://www.annieleibovitz.com/" target="_blank">Annie Leibovitz's Portfolio Site</a> is a prime example in the photography industry.
+        </p>
+        <p>
+            Strengths:
+            <ul>
+                <li>Clean, minimalist design that puts focus on the photographs</li>
+                <li>High-quality image display with optimal loading</li>
+                <li>Clear navigation and organization of work by category</li>
+            </ul>
+        </p>
+        <p>
+            Areas for Improvement:
+            <ul>
+                <li>Limited mobile responsiveness</li>
+                <li>Minimal information about services and pricing</li>
+                <li>Could benefit from more frequent content updates</li>
+            </ul>
+        </p>
+    </section>
+    <footer>
+        <p>&copy; <span id="currentYear"></span> All rights reserved.</p>
+    </footer>
+    <script>
+        document.getElementById('currentYear').textContent = new Date().getFullYear();
+    </script>
+</body>
