updated to add footer

--- a/index.html
+++ b/index.html
@@ -108,11 +108,15 @@
         </ul>
     </section>
     <footer>
-        <p>&copy; <span id="currentYear"></span> All rights reserved.</p>
+    <p>&copy; <span id="currentYear"></span> Tate Fishburn. All rights reserved.</p>
+    <p>Contact me at: <a href="mailto:tatefphotography@gmail.com">tatefphotography@gmail.com</a></p>
+    <p>Follow me on Instagram: <a href="https://www.instagram.com/tate.fishburn/">@tate.fishburn</a></p>
     </footer>
+
     <script>
-        document.getElementById('currentYear').textContent = new Date().getFullYear();
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
     </script>
 </body>
 
 </html>
+
