--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -84,20 +84,32 @@
     <d1>
         <dt><b>Geographic Location</b></dt>
         <dd>
-            <p>Since potential clients will view this site as a resume for my work, I want most the people viewing it to be near me.  St. George and Salt Lake City, or within 50 miles of either city.</p>
+            <p>Since potential clients will view this site as a resume for my work, I want most the people viewing it to
+                be near me. St. George and Salt Lake City, or within 50 miles of either city.</p>
         </dd>
         <dt><b>Age</b></dt>
         <dd>
-            <p>Target age is going to be older than me, ideally 45+.  These people have money, and appreciate simple effective designs (and reading).</p>
+            <p>Target age is going to be older than me, ideally 45+. These people have money, and appreciate simple
+                effective designs (and reading).</p>
         </dd>
         <dt><b>Income Level</b></dt>
         <dd>
-            <p>Target audience should have disposable income of $100,000+ annually. This includes established professionals, business owners, and executives who can invest in quality services.</p>
+            <p>Target audience should have disposable income of $100,000+ annually. This includes established
+                professionals, business owners, and executives who can invest in quality services.</p>
         </dd>
         <dt><b>Professional Status</b></dt>
         <dd>
-            <p>Small to medium business owners looking to establish or improve their online presence. Also targeting experienced professionals seeking career transitions who need a strong personal brand.</p>
-        </dt>
-        
+            <p>Small to medium business owners looking to establish or improve their online presence. Also targeting
+                experienced professionals seeking career transitions who need a strong personal brand.</p>
+            </dt>
+
     </d1>
 </body>
+<footer>
+    <p>&copy; <span id="currentYear"></span> Tate Fishburn. All rights reserved.</p>
+    <p>Contact me at: <a href="mailto:tatefphotography@gmail.com">tatefphotography@gmail.com</a></p>
+    <p>Follow me on Instagram: <a href="https://www.instagram.com/tate.fishburn/">@tate.fishburn</a></p>
+</footer>
+<script>
+    document.getElementById('currentYear').textContent = new Date().getFullYear();
+</script>
