--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -89,4 +89,12 @@
     <p>One example I want to work from is <a href="https://www.mpkelley.com/zn5jfin03urecqbmlcjv2n20nm5eva">Mike Bracken's</a> architectural portfolio</p>
     <p>I love the sleek design of this, particularly for landscapes and editoral/fancy photos however I think the controls are a little confusing for navigation and I don't like the pink when selecting in nav</p>
     <p>to keep it simple and try to reduce scope creep with this site, I'd really like to replicate his basic layout and navigation while exploring options in font, photo size and rendering, and other minor details.</p>
+    <footer>
+        <p>&copy; <span id="currentYear"></span> Tate Fishburn. All rights reserved.</p>
+        <p>Contact me at: <a href="mailto:tatefphotography@gmail.com">tatefphotography@gmail.com</a></p>
+        <p>Follow me on Instagram: <a href="https://www.instagram.com/tate.fishburn/">@tate.fishburn</a></p>
+    </footer>
+    <script>
+        document.getElementById('currentYear').textContent = new Date().getFullYear();
+    </script>
 </body>
