adjusted all files to match perfectly to assignment instructions.

--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -3,98 +3,37 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Competition</title>
 </head>
-<nav>
-    <a href="../index.html">home</a>
-    <a href="audience.html">audience</a>
-    <a href="index.html">portfolio</a>
-</nav>
-<header>
-    <h1>Competition</h1>
-</header>
-
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f9;
-        color: #333;
-    }
-
-    header h1 {
-        margin-bottom: 5px;
-    }
-
-    header h4 {
-        margin-top: 0;
-    }
-
-    header {
-        background: #026c99;
-        color: white;
-        padding: 10px 0;
-        text-align: center;
-    }
-
-    section {
-        max-width: 800px;
-        margin: 20px auto;
-        padding: 20px;
-        background: white;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    h1,
-    h2 {
-        color: #333;
-    }
-
-    ul {
-        list-style: none;
-        padding: 0;
-    }
-
-    ul li {
-        margin: 5px 0;
-    }
-
-    ul li a {
-        color: #026c99;
-        text-decoration: none;
-        font-weight: bold;
-    }
-
-    ul li a:hover {
-        text-decoration: underline;
-    }
-
-    footer {
-        text-align: center;
-        padding: 10px;
-        margin-top: 20px;
-        background: #333;
-        color: white;
-    }
-</style>
-<header>
-    <title>Competition</title>
-</header>
 
 <body>
-    <h1>Competition</h1>
-    <p>One example I want to work from is <a href="https://www.mpkelley.com/zn5jfin03urecqbmlcjv2n20nm5eva">Mike Bracken's</a> architectural portfolio</p>
-    <p>I love the sleek design of this, particularly for landscapes and editoral/fancy photos however I think the controls are a little confusing for navigation and I don't like the pink when selecting in nav</p>
-    <p>to keep it simple and try to reduce scope creep with this site, I'd really like to replicate his basic layout and navigation while exploring options in font, photo size and rendering, and other minor details.</p>
+    <header>
+        <h1>Tate Fishburn Photography</h1>
+    </header>
+    <nav>
+        <a href="index.html">Home</a>&nbsp;
+        <a href="competition.html">Competition</a>&nbsp;
+        <a href="audience.html">Audience</a>&nbsp;
+    </nav>
+    <main>
+        <h2>Competition Analysis</h2>
+
+        <h3>What competitors are doing right:</h3>
+        <p>Competitors like Mike Bracken have sleek designs for their architectural portfolios, which work well for
+            landscapes and editorial photos.</p>
+
+        <h3>What competitors are doing wrong:</h3>
+        <p>Some competitors have confusing navigation controls and poor color choices (like the pink selection in
+            navigation).</p>
+
+        <h3>How I can do better:</h3>
+        <p>I plan to replicate the basic layout and navigation while improving the font choices, photo sizing, and
+            rendering details to create a more user-friendly experience.</p>
+    </main>
     <footer>
-        <p>&copy; <span id="currentYear"></span> Tate Fishburn. All rights reserved.</p>
-        <p>Contact me at: <a href="mailto:tatefphotography@gmail.com">tatefphotography@gmail.com</a></p>
-        <p>Follow me on Instagram: <a href="https://www.instagram.com/tate.fishburn/">@tate.fishburn</a></p>
+        <h6>Copyright &copy; 2025</h6>
     </footer>
-    <script>
-        document.getElementById('currentYear').textContent = new Date().getFullYear();
-    </script>
 </body>
+
+</html>
