--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -3,115 +3,43 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Photography Portfolio</title>
 </head>
-
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f9;
-        color: #333;
-    }
-
-    header h1 {
-        margin-bottom: 5px;
-    }
-
-    header h4 {
-        margin-top: 0;
-    }
-
-    header {
-        background: #026c99;
-        color: white;
-        padding: 10px 0;
-        text-align: center;
-    }
-
-    section {
-        max-width: 800px;
-        margin: 20px auto;
-        padding: 20px;
-        background: white;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    h1,
-    h2 {
-        color: #333;
-    }
-
-    ul {
-        list-style: none;
-        padding: 0;
-    }
-
-    ul li {
-        margin: 5px 0;
-    }
-
-    ul li a {
-        color: #026c99;
-        text-decoration: none;
-        font-weight: bold;
-    }
-
-    ul li a:hover {
-        text-decoration: underline;
-    }
-
-    footer {
-        text-align: center;
-        padding: 10px;
-        margin-top: 20px;
-        background: #333;
-        color: white;
-    }
-</style>
-<nav>
-    <a href="../index.html">home</a>
-    <a href="audience.html">audience</a>
-    <a href="competition.html">competition</a>
-</nav>
 
 <body>
     <header>
         <h1>Tate Fishburn Photography</h1>
-        <h4><em>Specializing in Portraiture and Product Lifestyle Photography</em></h4>
     </header>
+    <nav>
+        <a href="index.html">Home</a>&nbsp;
+        <a href="competition.html">Competition</a>&nbsp;
+        <a href="audience.html">Audience</a>&nbsp;
+    </nav>
+    <main>
+        <h2>Website Summary:</h2>
+        <h4>What content will the site contain?</h4>
+        <p>This site will contain my photography portfolio, showcasing portraits and product photography.</p>
 
-    <section>
-        <h2>About Me</h2>
-        <p>Hey! My name is Tate Fishburn, I grew up in Highland Utah and have been doing photography for quite a while.
-            I really enjoy shooting people and products for companies, and I try to have a unique style. This site
-            serves as a collection of some of my favorite photographs, enjoy!</p>
-    </section>
+        <h4>Where will you get all of the content for your site (ie. images & text)?</h4>
+        <p>All images will be from my personal photography collection, and I will write the text content myself.</p>
 
-    <section>
-        <h1>Portraits</h1>
-        <p>Portraits are one of my favorite types of photography. I love capturing the essence of people, whether it's
-            a family member, a friend, or a celebrity. Here are some of my favorite portraits:</p>
-    </section>
-    <section>
-        <h1>Product Photography</h1>
-        <p>Product photography is a recent addition to my portfolio. I love capturing the essence of products, whether
-            it's a clothing item, a home decor piece, or a food item. Here are some of my favorite product
-            photographs:</p>
-    </section>
+        <h4>Why should users care about the focus of the site?</h4>
+        <p>Users should care because they can see my unique photography style and determine if it matches their needs.
+        </p>
+
+        <h4>Why should a site be built for this?</h4>
+        <p>A site should be built to showcase my photography work and attract potential clients.</p>
+
+        <h4>What would you like users to do at your site?</h4>
+        <p>I would like users to browse my portfolio and contact me for photography services.</p>
+
+        <h4>What is the goal of the site?</h4>
+        <p>The goal is to attract clients and showcase my photography skills and style.</p>
+    </main>
+    <footer>
+        <h6>Copyright &copy; 2025</h6>
+    </footer>
 </body>
-
-<footer>
-    <p>&copy; <span id="currentYear"></span> Tate Fishburn. All rights reserved.</p>
-    <p>Contact me at: <a href="mailto:tatefphotography@gmail.com">tatefphotography@gmail.com</a></p>
-    <p>Follow me on Instagram: <a href="https://www.instagram.com/tate.fishburn/">@tate.fishburn</a></p>
-</footer>
-
-<script>
-    document.getElementById('currentYear').textContent = new Date().getFullYear();
-</script>
 
 </html>
