--- a/milestone1/audience.html
+++ b/milestone1/audience.html
@@ -1,115 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f9;
-        color: #333;
-    }
-
-    header h1 {
-        margin-bottom: 5px;
-    }
-
-    header h4 {
-        margin-top: 0;
-    }
-
-    header {
-        background: #026c99;
-        color: white;
-        padding: 10px 0;
-        text-align: center;
-    }
-
-    section {
-        max-width: 800px;
-        margin: 20px auto;
-        padding: 20px;
-        background: white;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    h1,
-    h2 {
-        color: #333;
-    }
-
-    ul {
-        list-style: none;
-        padding: 0;
-    }
-
-    ul li {
-        margin: 5px 0;
-    }
-
-    ul li a {
-        color: #026c99;
-        text-decoration: none;
-        font-weight: bold;
-    }
-
-    ul li a:hover {
-        text-decoration: underline;
-    }
-
-    footer {
-        text-align: center;
-        padding: 10px;
-        margin-top: 20px;
-        background: #333;
-        color: white;
-    }
-</style>
-
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Audience</title>
-<nav>
-    <a href="../index.html">home</a>
-    <a href="competition.html">competition</a>
-    <a href="index.html">portfolio</a>
-</nav>
-<header>
-    <h1>Audience</h1>
-</header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
+    <title>Audience</title>
+</head>
 
 <body>
-    <h1>Audience</h1>
-    <d1>
-        <dt><b>Geographic Location</b></dt>
-        <dd>
-            <p>Since potential clients will view this site as a resume for my work, I want most the people viewing it to
-                be near me. St. George and Salt Lake City, or within 50 miles of either city.</p>
-        </dd>
-        <dt><b>Age</b></dt>
-        <dd>
-            <p>Target age is going to be older than me, ideally 45+. These people have money, and appreciate simple
-                effective designs (and reading).</p>
-        </dd>
-        <dt><b>Income Level</b></dt>
-        <dd>
-            <p>Target audience should have disposable income of $100,000+ annually. This includes established
-                professionals, business owners, and executives who can invest in quality services.</p>
-        </dd>
-        <dt><b>Professional Status</b></dt>
-        <dd>
-            <p>Small to medium business owners looking to establish or improve their online presence. Also targeting
-                experienced professionals seeking career transitions who need a strong personal brand.</p>
-            </dt>
+    <header>
+        <h1>Tate Fishburn Photography</h1>
+    </header>
+    <nav>
+        <a href="index.html">Home</a>&nbsp;
+        <a href="competition.html">Competition</a>&nbsp;
+        <a href="audience.html">Audience</a>&nbsp;
+    </nav>
+    <main>
+        <h2>Target Audience</h2>
 
-    </d1>
+        <h3>Geolocation:</h3>
+        <p>My primary audience lives in St. George and Salt Lake City, or within 50 miles of either city.</p>
+
+        <h3>Age:</h3>
+        <p>Target age is 45+ years old. These people have money and appreciate simple, effective designs.</p>
+
+        <h3>Gender:</h3>
+        <p>The site targets both men and women equally, with a slight emphasis on business professionals.</p>
+
+        <h3>Other Demographics:</h3>
+        <p>Target audience should have disposable income of $100,000+ annually. This includes established professionals,
+            business owners, and executives who can invest in quality photography services.</p>
+    </main>
+    <footer>
+        <h6>Copyright &copy; 2025</h6>
+    </footer>
 </body>
-<footer>
-    <p>&copy; <span id="currentYear"></span> Tate Fishburn. All rights reserved.</p>
-    <p>Contact me at: <a href="mailto:tatefphotography@gmail.com">tatefphotography@gmail.com</a></p>
-    <p>Follow me on Instagram: <a href="https://www.instagram.com/tate.fishburn/">@tate.fishburn</a></p>
-</footer>
-<script>
-    document.getElementById('currentYear').textContent = new Date().getFullYear();
-</script>
+
+</html>
