--- a/milestone1/portfolio.html
+++ b/milestone1/portfolio.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Photography Portfolio</title>
 </head>
 
@@ -77,6 +78,7 @@
     <a href="audience.html">audience</a>
     <a href="competition.html">competition</a>
 </nav>
+
 <body>
     <header>
         <h1>Tate Fishburn Photography</h1>
