made final adjustments to site. Should be good for milestone 1 now

--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
     </style>
 </head>
 <nav>
-    <a href="milestone1/audience.html">audience</a>
-    <a href="milestone1/competition.html">competition</a>
-    <a href="milestone1/index.html">portfolio</a>
+    <a href="../index.html">Course Homepage</a>&nbsp;&nbsp;&nbsp;
+    <a href="milestone1/index.html">Home</a>
+    <a href="milestone1/audience.html">Audience</a>
+    <a href="milestone1/competition.html">Competition</a>
 </nav>
 
 <body>
