--- a/milestone1/portfolio.html
+++ b/milestone1/portfolio.html
@@ -74,9 +74,10 @@
     }
 </style>
 <nav>
-    <a href="../index.html">home</a>
-    <a href="audience.html">audience</a>
-    <a href="competition.html">competition</a>
+    <a href="../index.html">Course Homepage</a>&nbsp;&nbsp;&nbsp;
+    <a href="index.html">Home</a>
+    <a href="audience.html">Audience</a>
+    <a href="competition.html">Competition</a>
 </nav>
 
 <body>
