--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -19,6 +19,9 @@
       <a href="faculty.html">Faculty</a> &nbsp;
       <a href="alumni.html">Alumni</a>
     </nav>
+    <div id="studenthero">
+      <img src="students.jpg" alt="Students" width="300px">
+    </div>
     <main>
       <h2>Why Attend Utah Tech?</h2>
       <dl>
