small bug fixes

--- a/utahtech3/faculty.html
+++ b/utahtech3/faculty.html
@@ -20,7 +20,7 @@
             <a href="alumni.html">Alumni</a>
         </nav>
         <div id="facultyhero">
-            <img src="faculty.jpg" alt="Faculty" width="300px">
+            <img src="facultyhero.jpg" alt="Faculty" width="300px">
         </div>
         <main>
             <h2>Faculty at Utah Tech University</h2>
