--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -20,10 +20,11 @@
       <a href="alumni.html">Alumni</a>
     </nav>
     <div id="studenthero">
-      <img src="students.jpg" alt="Students" width="300px">
     </div>
     <main>
       <h2>Why Attend Utah Tech?</h2>
+      <img src="students.jpg" alt="Students" width="300">
+      <h3>Student Life</h3>
       <dl>
         <dt>Open</dt>
         <dd>Utah Tech University is an open-access institution that offers access to open educational resources.</dd>
