--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -38,7 +38,7 @@
     </main>
     <footer>
       Copyright &copy; 2025 Utah Tech University<br>
-      <a href="mailto:firstname.lastname@utahtech.edu">firstname.lastname@utahtech.edu</a>
+      <a href="mailto:tatefphotography@gmail.com">tatefphotography@gmail.com</a>
     </footer>
   </div>
 </body>
