removed detailed list

--- a/utahtech3/faculty.html
+++ b/utahtech3/faculty.html
@@ -29,17 +29,17 @@
             <p>15% of classes at Utah Tech are online and accessible to those outside the region.</p>
             <h3>Small Class Size</h3>
             <p>Classes are small, averaging 20:1 student-to-teacher ratios.</p>
-            <dl>
-                <dt>Open</dt>
-                <dd>Utah Tech University is an open-access institution that offers access to open educational resources.
-                </dd>
-                <dt>Inclusive</dt>
-                <dd>UT promotes inclusivity through personalized services and diverse teaching methods.</dd>
-                <dt>Comprehensive</dt>
-                <dd>Utah Tech offers programs in humanities, arts, education, health sciences, business, and STEM.</dd>
-                <dt>Polytechnic</dt>
-                <dd>All UT students gain real-world learning experiences through industry partnerships.</dd>
-            </dl>
+            <ul>
+                <li>Open</li>
+                <li>Utah Tech University is an open-access institution that offers access to open educational resources.
+                </li>
+                <li>Inclusive</li>
+                <li>UT promotes inclusivity through personalized services and diverse teaching methods.</li>
+                <li>Comprehensive</li>
+                <li>Utah Tech offers programs in humanities, arts, education, health sciences, business, and STEM.</li>
+                <li>Polytechnic</li>
+                <li>All UT students gain real-world learning experiences through industry partnerships.</li>
+            </ul>
         </main>
         <footer>
             Copyright &copy; 2025 Utah Tech University<br>
