--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -11,13 +11,17 @@
 <body>
   <div id="wrapper">
     <header>
-      <h1>Utah Tech University</h1>
+      <a href="index.html">
+        <h1>Utah Tech University</h1>
+      </a>
     </header>
     <nav>
-      <a href="index.html">Home</a> &nbsp;
-      <a href="students.html">Students</a> &nbsp;
-      <a href="faculty.html">Faculty</a> &nbsp;
-      <a href="alumni.html">Alumni</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="students.html">Students</a></li>
+        <li><a href="faculty.html">Faculty</a></li>
+        <li><a href="alumni.html">Alumni</a></li>
+      </ul>
     </nav>
     <div id="studenthero">
     </div>
@@ -25,16 +29,16 @@
       <h2>Why Attend Utah Tech?</h2>
       <img src="students.jpg" alt="Students" width="300">
       <h3>Student Life</h3>
-      <dl>
-        <dt>Open</dt>
-        <dd>Utah Tech University is an open-access institution that offers access to open educational resources.</dd>
-        <dt>Inclusive</dt>
-        <dd>UT promotes inclusivity through personalized services and diverse teaching methods.</dd>
-        <dt>Comprehensive</dt>
-        <dd>Utah Tech offers programs in humanities, arts, education, health sciences, business, and STEM.</dd>
-        <dt>Polytechnic</dt>
-        <dd>All UT students gain real-world learning experiences through industry partnerships.</dd>
-      </dl>
+      <ul>
+        <li><strong>Open:</strong> Utah Tech University is an open-access institution that offers access to open
+          educational resources.</li>
+        <li><strong>Inclusive:</strong> UT promotes inclusivity through personalized services and diverse teaching
+          methods.</li>
+        <li><strong>Comprehensive:</strong> Utah Tech offers programs in humanities, arts, education, health sciences,
+          business, and STEM.</li>
+        <li><strong>Polytechnic:</strong> All UT students gain real-world learning experiences through industry
+          partnerships.</li>
+      </ul>
     </main>
     <footer>
       Copyright &copy; 2025 Utah Tech University<br>
