--- a/utahtech3/faculty.html
+++ b/utahtech3/faculty.html
@@ -11,15 +11,13 @@
 <body>
     <div id="wrapper">
         <header>
-            <a href="index.html"><h1>Utah Tech University</h1></a>
+            <h1>Utah Tech University</h1>
         </header>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="students.html">Students</a></li>
-                <li><a href="faculty.html">Faculty</a></li>
-                <li><a href="alumni.html">Alumni</a></li>
-            </ul>
+            <a href="index.html">Home</a> &nbsp;
+            <a href="students.html">Students</a> &nbsp;
+            <a href="faculty.html">Faculty</a> &nbsp;
+            <a href="alumni.html">Alumni</a>
         </nav>
         <div id="facultyhero">
         </div>
