--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -12,7 +12,7 @@
         <h1>Tate Fishburn Photography</h1>
     </header>
     <nav>
-        <a href="../index.html">Course Homepage</a>&nbsp;&nbsp;&nbsp;
+        <a href="index.html">Course Homepage</a>&nbsp;&nbsp;&nbsp;
         <a href="index.html">Home</a>&nbsp;
         <a href="competition.html">Competition</a>&nbsp;
         <a href="audience.html">Audience</a>&nbsp;
