--- a/utahtech5/faculty.html
+++ b/utahtech5/faculty.html
@@ -11,7 +11,9 @@
 <body>
     <div id="wrapper">
         <header>
-            <a href="index.html"><h1>Utah Tech University</h1></a>
+            <a href="index.html">
+                <h1>Utah Tech University</h1>
+            </a>
         </header>
         <nav>
             <ul>
