--- a/utahtech5/index.html
+++ b/utahtech5/index.html
@@ -5,15 +5,14 @@
     <title>Utah Tech University</title>
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta viewport="device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="wrapper">
-        <div id="bluebar">
-            <div id="greybar">
-            </div>
+        <div id="bluebar"></div>
+        <div id="greybar"></div>
         </div>
         <header>
             <h1><a href="index.html">Utah Tech University</a></h1>
