--- a/utahtech6/students.html
+++ b/utahtech6/students.html
@@ -5,11 +5,14 @@
   <title>Utah Tech University :: Students</title>
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div id="wrapper">
+    <div id="greybar"></div>
+    <div id="bluebar"></div>
     <header>
       <a href="index.html">
         <h1>Utah Tech University</h1>
