--- a/utahtech6/alumni.html
+++ b/utahtech6/alumni.html
@@ -14,9 +14,7 @@
         <div id="bluebar"></div>
         <div id="greybar"></div>
         <header>
-            <a href="index.html">
-                <h1>Utah Tech University</h1>
-            </a>
+            <h1><a href="index.html">Utah Tech University</a></h1>
         </header>
         <nav>
             <ul>
@@ -33,23 +31,23 @@
             <h3>Request Alumni Newsletter</h3>
             <p>Required information is marked with an asterisk (*).</p>
             <form action="https://kearl.net/se1400/mail.php" method="post">
-                <label for="First Name">*First Name: </label>
-                <input type="text" id="First Name" name="myFName" required>
+                <label for="myFName">*First Name: </label>
+                <input type="text" id="myFName" name="myFName" required>
 
-                <label for="Last Name">*Last Name: </label>
-                <input type="text" id="Last Name" name="myLName" required>
+                <label for="myLName">*Last Name: </label>
+                <input type="text" id="myLName" name="myLName" required>
 
-                <label for="Email">*Email: </label>
-                <input type="email" id="Email" name="myEmail" required>
+                <label for="myEmail">*Email: </label>
+                <input type="email" id="myEmail" name="myEmail" required>
 
-                <label for="Phone">Phone: </label>
-                <input type="tel" id="Phone" name="myPhone">
+                <label for="myPhone">Phone: </label>
+                <input type="tel" id="myPhone" name="myPhone">
 
-                <label for="Comments">*Comments: </label>
-                <textarea id="Comments" name="myComments" rows="2" cols="20" required></textarea>
+                <label for="myComments">*Comments: </label>
+                <textarea id="myComments" name="myComments" rows="2" cols="20" required></textarea>
 
-                <label for="Graduation Date">Graduation Date: </label>
-                <input type="date" id="Graduation Date" name="myGradDate">
+                <label for="myGradDate">Graduation Date: </label>
+                <input type="date" id="myGradDate" name="myGradDate">
 
                 <input id="mySubmit" type="submit" value="Submit">
             </form>
