--- a/milestone5/portfolio.html
+++ b/milestone5/portfolio.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="robots" content="noindex, nofollow">
-        <title>Portfolio Page</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+    <title>Tate Fishburn Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div id="wrapper">
         <header>
-            <h1>Portfolio</h1>
         </header>
-        <nav>
-            <ul id="hovering-nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
+
+        <div id="left-title-area">
+            <h1>Tate Fishburn<br>Portfolio</h1>
+        </div>
+
+        <nav id="hovering-nav">
+            <ul>
+                <li><a href="portfolio.html">portfolio</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
-    </body>
-</html>
+
+        <main>
+            <!-- Content will go here in future milestones -->
+        </main>
+
+        <footer>
+            <p>&copy; 2025 Tate Fishburn</p>
+        </footer>
+    </div>
+</body>
