--- a/milestone5/portfolio.html
+++ b/milestone5/portfolio.html
@@ -39,43 +39,43 @@
             <div id="photo-grid">
                 <div class="photo-item">
                     <picture>
-                        <source media="(max-width: 768px)" srcset="photos/GLB - Utah Tech and Snow Canyon (29 of 67).jpg">
-                        <source media="(max-width: 992px)" srcset="photos/GLB - Utah Tech and Snow Canyon (29 of 67).jpg">
+                        <source media="(max-width: 768px)" srcset="photos/GLB - Utah Tech and Snow Canyon (29 of 67).jpg 1x">
+                        <source media="(max-width: 992px)" srcset="photos/GLB - Utah Tech and Snow Canyon (29 of 67).jpg 1x">
                         <img src="photos/GLB - Utah Tech and Snow Canyon (29 of 67).jpg" alt="Utah Tech and Snow Canyon" loading="lazy">
                     </picture>
                 </div>
                 <div class="photo-item">
                     <picture>
-                        <source media="(max-width: 768px)" srcset="photos/Sony 15 RLTSuspension Truck Run (2 of 12).jpg">
-                        <source media="(max-width: 992px)" srcset="photos/Sony 15 RLTSuspension Truck Run (2 of 12).jpg">
+                        <source media="(max-width: 768px)" srcset="photos/Sony 15 RLTSuspension Truck Run (2 of 12).jpg 1x">
+                        <source media="(max-width: 992px)" srcset="photos/Sony 15 RLTSuspension Truck Run (2 of 12).jpg 1x">
                         <img src="photos/Sony 15 RLTSuspension Truck Run (2 of 12).jpg" alt="RLT Suspension Truck Run" loading="lazy">
                     </picture>
                 </div>
                 <div class="photo-item">
                     <picture>
-                        <source media="(max-width: 768px)" srcset="photos/Sony 18 Audrey Gym pt 2 (1 of 38).jpg">
-                        <source media="(max-width: 992px)" srcset="photos/Sony 18 Audrey Gym pt 2 (1 of 38).jpg">
+                        <source media="(max-width: 768px)" srcset="photos/Sony 18 Audrey Gym pt 2 (1 of 38).jpg 1x">
+                        <source media="(max-width: 992px)" srcset="photos/Sony 18 Audrey Gym pt 2 (1 of 38).jpg 1x">
                         <img src="photos/Sony 18 Audrey Gym pt 2 (1 of 38).jpg" alt="Audrey Gym Photography" loading="lazy">
                     </picture>
                 </div>
                 <div class="photo-item">
                     <picture>
-                        <source media="(max-width: 768px)" srcset="photos/Sony 19 Sophies 23rd Birthday (21 of 53).jpg">
-                        <source media="(max-width: 992px)" srcset="photos/Sony 19 Sophies 23rd Birthday (21 of 53).jpg">
+                        <source media="(max-width: 768px)" srcset="photos/Sony 19 Sophies 23rd Birthday (21 of 53).jpg 1x">
+                        <source media="(max-width: 992px)" srcset="photos/Sony 19 Sophies 23rd Birthday (21 of 53).jpg 1x">
                         <img src="photos/Sony 19 Sophies 23rd Birthday (21 of 53).jpg" alt="Sophie's 23rd Birthday" loading="lazy">
                     </picture>
                 </div>
                 <div class="photo-item">
                     <picture>
-                        <source media="(max-width: 768px)" srcset="photos/Sony 21 Camping with the Nerds (31 of 59).jpg">
-                        <source media="(max-width: 992px)" srcset="photos/Sony 21 Camping with the Nerds (31 of 59).jpg">
+                        <source media="(max-width: 768px)" srcset="photos/Sony 21 Camping with the Nerds (31 of 59).jpg 1x">
+                        <source media="(max-width: 992px)" srcset="photos/Sony 21 Camping with the Nerds (31 of 59).jpg 1x">
                         <img src="photos/Sony 21 Camping with the Nerds (31 of 59).jpg" alt="Camping with the Nerds" loading="lazy">
                     </picture>
                 </div>
                 <div class="photo-item">
                     <picture>
-                        <source media="(max-width: 768px)" srcset="photos/Sony13 ALASKA (39 of 53).jpg">
-                        <source media="(max-width: 992px)" srcset="photos/Sony13 ALASKA (39 of 53).jpg">
+                        <source media="(max-width: 768px)" srcset="photos/Sony13 ALASKA (39 of 53).jpg 1x">
+                        <source media="(max-width: 992px)" srcset="photos/Sony13 ALASKA (39 of 53).jpg 1x">
                         <img src="photos/Sony13 ALASKA (39 of 53).jpg" alt="Alaska Photography" loading="lazy">
                     </picture>
                 </div>
